Commiting christopher-lien branch with final code.New branch for stretch

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git<!doctype html>
+<!doctype html>
 
 <html lang="en">
 <head>
@@ -8,6 +8,8 @@ git<!doctype html>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -17,11 +19,22 @@ git<!doctype html>
 <body>
 
  <!-- navigation code here -->
+ <div class="navContainer">
+   <h1 class="navLogo">SpaceWalkers</h1>
 
+   <nav>
+     <a class="navLink" href="#">Home</a>
+     <a class="navLink" href="#">About Us</a>
+     <a class="navLink" href="#">Blog</a>
+     <a class="navLink" href="#">Contact</a>
+     <a class="navLink" href="#">Sign In</a>
+   </nav>
+ </div>
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
+      <img src="img/main-header.png" alt="Photo of Earth Taken from Space" class="headerImage" />
 
       <h2>Lift Off</h2>
 
@@ -48,7 +61,7 @@ git<!doctype html>
         <h3>Let's Go For A Walk</h3>
 
         <p>The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.</p>
-      
+
         <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth.</p>
 
         <div class="btn">
